--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <base href="%PUBLIC_URL%" />
     <title>%SNOWPACK_PUBLIC_TITLE%</title>
-    <meta name="description" content="%SNOWPACK_PUBLIC_DESCRIPTION%">
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="alternate icon" href="favicon.png" type="image/png">
+    <meta name="description" content="%SNOWPACK_PUBLIC_DESCRIPTION%" />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="favicon.png" type="image/png" />
     <style type="text/css" src="/dist/assets/styles.css"></style>
     <script type="module" src="/dist/index.js"></script>
   </head>
