✨ support for an external confi file

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="%SNOWPACK_PUBLIC_DESCRIPTION%" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="alternate icon" href="favicon.png" type="image/png" />
-    <style type="text/css" src="/dist/assets/styles.css"></style>
-    <script type="module" src="/dist/index.js"></script>
+    <style type="text/css" src="dist/assets/styles.css"></style>
+    <script type="module" src="dist/index.js"></script>
   </head>
   <body>
     <noscript>You need to enable Javascript to run this application.</noscript>
